# tinker-engine

./: .flake8  .gitignore  .gitlab-ci.yml  Dockerfile  Pipfile  README.md  basealgorithm.py  baseprotocol.py  dataset.py  entrypoint.sh  input.json  jplinterface.py  main.py  problem.py  protocols.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yml  publish.yml
algorithm/: .gitignore  README.md  VAAL_config.json  algorithm.py  algorithm_objdet.py  basealgorithm.py  dataset.py  input.json  main.py  master_config.json  problem.py  requirements-dev.txt  requirements.txt  secrets.example  solver.py
algorithm/CloserLookFewShot/: model.py
algorithm/VAAL/: model.py  vgg.py
algorithm/example/: algoSelection.py  domainNetworkSelection.py  domainNetworkSelectionAdapter.py  example.py  image_classification.py  object_detector.py  query_algo.py  simple.py  template.py
algorithm/tests/: test_dataset.py  test_problem.py  test_sampler.py
docs/: Makefile
examples/: README.md  __init__.py  helloworld.py
framework/: __init__.py  basealgorithm.py  baseprotocol.py  dataset.py  harness.py  jplinterface.py  localinterface.py  main.py  metrics.py  parinterface.py
learn_framework/: CONTRIBUTING.rst  HISTORY.rst  Makefile  README.rst  requirements_dev.txt  setup.cfg  setup.py  tox.ini
protocol/: learn.py  sailon.py
src/: basealgorithm.py  baseprotocol.py  dataset.py  jplinterface.py  localinterface.py  main.py
test/: test_config.py
tinker/: __init__.py  algorithm.py  basealgorithm.py  configuration.py  harness.py  main.py  protocol.py
(+72 files in other folders)
